Reran to double check that some of them are working

--- a/Lab_6.ipynb
+++ b/Lab_6.ipynb
@@ -1159,12 +1159,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "a450b5e5",
    "metadata": {
     "id": "a450b5e5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "k_svd            50\n",
+       "k_nn              5\n",
+       "metric       cosine\n",
+       "weights    distance\n",
+       "acc          0.7546\n",
+       "f1          0.75297\n",
+       "evr        0.048608\n",
+       "Name: 4, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "best = svd_df.sort_values(\"f1\", ascending=False).iloc[0]\n",
@@ -1173,12 +1191,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "a3e83690",
    "metadata": {
     "id": "a3e83690"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== FINAL TEST RESULTS (SVD+KNN) ===\n",
+      "Accuracy: 0.7515\n",
+      "F1: 0.7423\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.7347    0.7874    0.7601     12500\n",
+      "           1     0.7710    0.7156    0.7423     12500\n",
+      "\n",
+      "    accuracy                         0.7515     25000\n",
+      "   macro avg     0.7528    0.7515    0.7512     25000\n",
+      "weighted avg     0.7528    0.7515    0.7512     25000\n",
+      "\n",
+      "Confusion matrix:\n",
+      " [[9843 2657]\n",
+      " [3555 8945]]\n"
+     ]
+    }
+   ],
    "source": [
     "X_tr_final = np.concatenate([X_train])\n",
     "y_tr_final = np.concatenate([y_train])\n",
@@ -1275,16 +1316,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "X7TfuJT5PsB8",
-   "metadata": {
-    "id": "X7TfuJT5PsB8"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
    "id": "87b6afba",
    "metadata": {
     "id": "87b6afba"
